Bug 1926446 - Add missing error reporting to StreamCacheEntry testing functions. r=arai

Differential Revision: https://phabricator.services.mozilla.com/D226920