js/src/jit-test/tests/wasm/regress/cache-entry-error.js
@@ -1,0 +1,7 @@
+load(libdir + "asserts.js");
+
+var entry = streamCacheEntry(new ArrayBuffer());
+assertErrorMessage(() => entry.getBuffer.call(),
+                   Error, /Expected StreamCacheEntry/);
+assertErrorMessage(() => Object.getOwnPropertyDescriptor(entry, "cached").get(),
+                   Error, /Expected StreamCacheEntry/);
